[package]
name = "ActixRoot"
version = "0.1.0"
authors = ["brittosaji <bs1067@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
listenfd = "0.3"
actix-service="0.4"
futures = "0.1"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"